--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@headlessui/vue": "^1.7.23",
+    "@nuxt/ui": "^2.19.2",
     "nuxt": "^3.13.2",
     "vue": "latest",
     "vue-router": "latest"
